wip adjusted properties

--- a/ansible/playbooks/provision/roles/aervits.hbase/templates/hbase-site.xml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/templates/hbase-site.xml
@@ -263,7 +263,7 @@
 
     <property>
       <name>zookeeper.znode.parent</name>
-      <value>/hbase-unsecure</value>
+      <value>/hbase</value>
     </property>
 
   <property>
