--- a/ansible/playbooks/provision/roles/aervits.oozie/templates/oozie-site.xml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/templates/oozie-site.xml
@@ -1,122 +1,194 @@
 <configuration>
 
     <property>
-      <name>oozie.action.retry.interval</name>
-      <value>30</value>
-    </property>
-
-    <property>
-      <name>oozie.authentication.simple.anonymous.allowed</name>
-      <value>true</value>
-    </property>
-
-    <property>
-      <name>oozie.authentication.type</name>
-      <value>simple</value>
-    </property>
-
-    <property>
-      <name>oozie.base.url</name>
-      <value>{{ ansible_nodename }}:11000/oozie</value>
-    </property>
-
-    <property>
-      <name>oozie.credentials.credentialclasses</name>
-      <value>hcat=org.apache.oozie.action.hadoop.HCatCredentials,hive2=org.apache.oozie.action.hadoop.Hive2Credentials</value>
-    </property>
-
-<property>
-      <name>oozie.db.schema.name</name>
-      <value>oozie</value>
-    </property>
-
-    <property>
-        <name>oozie.service.AuthorizationService.authorization.enabled</name>
-        <value>false</value>
+        <name>oozie.action.retry.interval</name>
+        <value>10</value>
         <description>
-            Specifies whether security (user name/admin role) is enabled or not.
-            If disabled any user can manage Oozie system and manage any job.
+            The interval between retries of an action in case of failure
         </description>
     </property>
 
     <property>
-      <name>oozie.service.HadoopAccessorService.hadoop.configurations</name>
-      <value>*=hadoop-conf</value>
+        <name>oozie.authentication.simple.anonymous.allowed</name>
+        <value>true</value>
+        <description>
+            Indicates if anonymous requests are allowed when using 'simple' authentication.
+        </description>
     </property>
 
-<property>
-        <name>oozie.service.HadoopAccessorService.action.configurations</name>
-        <value>*=action-conf</value>
+    <property>
+        <name>oozie.authentication.type</name>
+        <value>simple</value>
         <description>
-            Comma separated AUTHORITY=ACTION_CONF_DIR, where AUTHORITY is the HOST:PORT of
-            the Hadoop MapReduce service (JobTracker, YARN). The wildcard '*' configuration is
-            used when there is no exact match for an authority. The ACTION_CONF_DIR may contain
-            ACTION.xml files where ACTION is the action type ('java', 'map-reduce', 'pig',
-            'hive', 'sqoop', etc.). If the ACTION.xml file exists, its properties will be used
-            as defaults properties for the action. If the path is relative is looked within
+            Defines authentication used for Oozie HTTP endpoint.
+            Supported values are: simple | kerberos | #AUTHENTICATION_HANDLER_CLASSNAME#
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.server.authentication.type</name>
+        <value>${oozie.authentication.type}</value>
+        <description>
+            Defines authentication used for Oozie server communicating to other Oozie server over HTTP(s).
+            Supported values are: simple | kerberos | #AUTHENTICATOR_CLASSNAME#
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.base.url</name>
+        <value>{{ ansible_nodename }}:11000/oozie</value>
+        <description>
+            Base Oozie URL.
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.credentials.credentialclasses</name>
+        <value>hcat=org.apache.oozie.action.hadoop.HCatCredentials,hive2=org.apache.oozie.action.hadoop.Hive2Credentials</value>
+        <description>
+            A list of credential class mapping for CredentialsProvider
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.db.schema.name</name>
+        <value>oozie</value>
+        <description>
+            Oozie DataBase Name
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.service.HadoopAccessorService.hadoop.configurations</name>
+        <value>*=hadoop-conf</value>
+        <description>
+            Comma separated AUTHORITY=HADOOP_CONF_DIR, where AUTHORITY is the HOST:PORT of
+            the Hadoop service (JobTracker, YARN, HDFS). The wildcard '*' configuration is
+            used when there is no exact match for an authority. The HADOOP_CONF_DIR contains
+            the relevant Hadoop *-site.xml files. If the path is relative is looked within
             the Oozie configuration directory; though the path can be absolute (i.e. to point
             to Hadoop client conf/ directories in the local filesystem.
         </description>
     </property>
 
-    <!-- Sharelib Configuration -->
     <property>
-        <name>oozie.service.ShareLibService.mapping.file</name>
-        <value> </value>
+        <name>oozie.service.HadoopAccessorService.kerberos.enabled</name>
+        <value>false</value>
         <description>
-            Sharelib mapping files contains list of key=value,
-            where key will be the sharelib name for the action and value is a comma separated list of
-            DFS or local filesystem directories or jar files.
-            Example.
-            oozie.pig_10=hdfs:///share/lib/pig/pig-0.10.1/lib/
-            oozie.pig=hdfs:///share/lib/pig/pig-0.11.1/lib/
-            oozie.distcp=hdfs:///share/lib/hadoop-2.2.0/share/hadoop/tools/lib/hadoop-distcp-2.2.0.jar
-            oozie.hive=file:///usr/local/oozie/share/lib/hive/
+            Indicates if Oozie is configured to use Kerberos.
         </description>
     </property>
 
     <property>
-      <name>oozie.service.HadoopAccessorService.kerberos.enabled</name>
-      <value>false</value>
+        <name>oozie.service.JPAService.jdbc.driver</name>
+        <value>org.apache.derby.jdbc.EmbeddedDriver</value>
+        <description>
+            JDBC driver class.
+        </description>
     </property>
 
     <property>
-      <name>oozie.service.JPAService.jdbc.driver</name>
-      <value>org.apache.derby.jdbc.EmbeddedDriver</value>
-    </property>
-
-<property>
-      <name>oozie.service.JPAService.jdbc.password</name>
-      <value>SECRET:oozie-site:1:oozie.service.JPAService.jdbc.password</value>
-    </property>
-
-    <property>
-      <name>oozie.service.JPAService.jdbc.url</name>
-      <value>jdbc:derby:${oozie.data.dir}/${oozie.db.schema.name}-db;create=true</value>
+        <name>oozie.service.JPAService.jdbc.password</name>
+        <value>SECRET:oozie-site:1:oozie.service.JPAService.jdbc.password</value>
+        <description>
+            DB user password.
+            IMPORTANT: if password is emtpy leave a 1 space string, the service trims the value,
+            if empty Configuration assumes it is NULL.
+            IMPORTANT: if the StoreServicePasswordService is active, it will reset this value with the value given in
+            the console.
+        </description>
     </property>
 
     <property>
-      <name>oozie.service.JPAService.jdbc.username</name>
-      <value>oozie</value>
+        <name>oozie.service.JPAService.jdbc.url</name>
+        <value>jdbc:derby:${oozie.data.dir}/${oozie.db.schema.name}-db;create=true</value>
+        <description>
+            JDBC URL.
+        </description>
     </property>
 
     <property>
-      <name>oozie.service.SparkConfigurationService.spark.configurations</name>
-      <value>*=spark-conf</value>
+        <name>oozie.service.JPAService.jdbc.username</name>
+        <value>oozie</value>
+        <description>
+            DB user name.
+        </description>
     </property>
 
     <property>
-      <name>oozie.service.URIHandlerService.uri.handlers</name>
-      <value>org.apache.oozie.dependency.FSURIHandler,org.apache.oozie.dependency.HCatURIHandler</value>
+        <name>oozie.service.SparkConfigurationService.spark.configurations</name>
+        <value>*=spark-conf</value>
+        <description>
+            Comma separated AUTHORITY=SPARK_CONF_DIR, where AUTHORITY is the HOST:PORT of
+            the ResourceManager of a YARN cluster. The wildcard '*' configuration is
+            used when there is no exact match for an authority. The SPARK_CONF_DIR contains
+            the relevant spark-defaults.conf properties file. If the path is relative is looked within
+            the Oozie configuration directory; though the path can be absolute.  This is only used
+            when the Spark master is set to either "yarn-client" or "yarn-cluster".
+        </description>
     </property>
 
     <property>
-      <name>oozie.services.ext</name>
-      <value>
-      org.apache.oozie.service.JMSAccessorService,org.apache.oozie.service.PartitionDependencyManagerService,org.apache.oozie.service.HCatAccessorService</value>
+        <name>oozie.service.URIHandlerService.uri.handlers</name>
+        <value>org.apache.oozie.dependency.FSURIHandler,org.apache.oozie.dependency.HCatURIHandler</value>
+        <description>
+            Enlist the different uri handlers supported for data availability checks.
+        </description>
     </property>
 
-<property>
+    <property>
+        <name>oozie.services.ext</name>
+        <value>
+            org.apache.oozie.service.JMSAccessorService,org.apache.oozie.service.PartitionDependencyManagerService,org.apache.oozie.service.HCatAccessorService</value>
+    </property>
+
+    <property>
+        <name>oozie.services</name>
+        <value>
+            org.apache.oozie.service.SchedulerService,
+            org.apache.oozie.service.MetricsInstrumentationService,
+            org.apache.oozie.service.MemoryLocksService,
+            org.apache.oozie.service.UUIDService,
+            org.apache.oozie.service.ELService,
+            org.apache.oozie.service.AuthorizationService,
+            org.apache.oozie.service.UserGroupInformationService,
+            org.apache.oozie.service.HadoopAccessorService,
+            org.apache.oozie.service.JobsConcurrencyService,
+            org.apache.oozie.service.URIHandlerService,
+            org.apache.oozie.service.DagXLogInfoService,
+            org.apache.oozie.service.SchemaService,
+            org.apache.oozie.service.LiteWorkflowAppService,
+            org.apache.oozie.service.JPAService,
+            org.apache.oozie.service.StoreService,
+            org.apache.oozie.service.SLAStoreService,
+            org.apache.oozie.service.DBLiteWorkflowStoreService,
+            org.apache.oozie.service.CallbackService,
+            org.apache.oozie.service.ActionService,
+            org.apache.oozie.service.ShareLibService,
+            org.apache.oozie.service.CallableQueueService,
+            org.apache.oozie.service.ActionCheckerService,
+            org.apache.oozie.service.RecoveryService,
+            org.apache.oozie.service.PurgeService,
+            org.apache.oozie.service.CoordinatorEngineService,
+            org.apache.oozie.service.BundleEngineService,
+            org.apache.oozie.service.DagEngineService,
+            org.apache.oozie.service.CoordMaterializeTriggerService,
+            org.apache.oozie.service.StatusTransitService,
+            org.apache.oozie.service.PauseTransitService,
+            org.apache.oozie.service.GroupsService,
+            org.apache.oozie.service.ProxyUserService,
+            org.apache.oozie.service.XLogStreamingService,
+            org.apache.oozie.service.JvmPauseMonitorService,
+            org.apache.oozie.service.SparkConfigurationService,
+            org.apache.oozie.service.SchemaCheckerService
+        </value>
+        <description>
+            All services to be created and managed by Oozie Services singleton.
+            Class names must be separated by commas.
+        </description>
+    </property>
+
+    <property>
         <name>oozie.service.ActionService.executor.classes</name>
         <value>
             org.apache.oozie.action.decision.DecisionActionExecutor,
@@ -139,4 +211,40 @@
             Only action types with associated executors can be used in workflows.
         </description>
     </property>
-  </configuration>
+
+    <property>
+        <name>oozie.service.SchemaService.wf.schemas</name>
+        <value>
+            oozie-common-1.0.xsd,
+            oozie-workflow-0.1.xsd,oozie-workflow-0.2.xsd,oozie-workflow-0.2.5.xsd,oozie-workflow-0.3.xsd,oozie-workflow-0.4.xsd,
+            oozie-workflow-0.4.5.xsd,oozie-workflow-0.5.xsd,oozie-workflow-1.0.xsd,
+            shell-action-0.1.xsd,shell-action-0.2.xsd,shell-action-0.3.xsd,shell-action-1.0.xsd,
+            email-action-0.1.xsd,email-action-0.2.xsd,
+            hive-action-0.2.xsd,hive-action-0.3.xsd,hive-action-0.4.xsd,hive-action-0.5.xsd,hive-action-0.6.xsd,hive-action-1.0.xsd,
+            sqoop-action-0.2.xsd,sqoop-action-0.3.xsd,sqoop-action-0.4.xsd,sqoop-action-1.0.xsd,
+            ssh-action-0.1.xsd,ssh-action-0.2.xsd,
+            distcp-action-0.1.xsd,distcp-action-0.2.xsd,distcp-action-1.0.xsd,
+            oozie-sla-0.1.xsd,oozie-sla-0.2.xsd,
+            hive2-action-0.1.xsd,hive2-action-0.2.xsd,hive2-action-1.0.xsd,
+            spark-action-0.1.xsd,spark-action-0.2.xsd,spark-action-1.0.xsd
+        </value>
+        <description>
+            List of schemas for workflows (separated by commas).
+        </description>
+    </property>
+
+    <property>
+        <name>oozie.action.shell.setup.hadoop.conf.dir</name>
+        <value>false</value>
+        <description>
+            The Shell action is commonly used to run programs that rely on HADOOP_CONF_DIR (e.g. hive, beeline, sqoop, etc).  With
+            YARN, HADOO_CONF_DIR is set to the NodeManager's copies of Hadoop's *-site.xml files, which can be problematic because
+            (a) they are for meant for the NM, not necessarily clients, and (b) they won't have any of the configs that Oozie, or
+            the user through Oozie, sets.  When this property is set to true, The Shell action will prepare the *-site.xml files
+            based on the correct config and set HADOOP_CONF_DIR to point to it.  Setting it to false will make Oozie leave
+            HADOOP_CONF_DIR alone.  This can also be set at the Action level by putting it in the Shell Action's configuration
+            section, which also has priorty.  That all said, it's recommended to use the appropriate action type when possible.
+        </description>
+    </property>
+
+</configuration>
